refactor: Adjust the serialization module structure